<resources>
    <string name="app_name">HK School Finder</string>
    <string name="home_subtitle">Search Hong Kong schools by district and level</string>
    <string name="search_hint">Search by school name or address</string>
    <string name="refresh_school_list">Refresh School List</string>
    <string name="ready">Ready</string>
    <string name="loading_message">Loading school data...</string>
    <string name="load_failed_message">Could not load live data. Please try again later.</string>
    <string name="result_summary">Showing %1$d of %2$d schools</string>
    <string name="result_summary_tc">顯示 %1$d / %2$d 所學校</string>
    <string name="switch_to_traditional_chinese">繁體中文</string>
    <string name="switch_to_english">English</string>
    <string name="all_districts_en">All Districts</string>
    <string name="all_districts_tc">全部地區</string>
    <string name="all_levels_en">All Levels</string>
    <string name="all_levels_tc">全部級別</string>
    <string name="open_website">Open Website</string>
    <string name="open_map">Open Map</string>
    <string name="no_app_for_website">No app can open this website</string>
    <string name="no_app_for_map">No app can open map</string>
    <string name="back">Back</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="finance_type">Finance Type</string>
    <string name="students_gender">Students Gender</string>
    <string name="session">Session</string>
    <string name="telephone">Telephone</string>
    <string name="religion">Religion</string>
    <string name="website">Website</string>
    <string name="open_school_website">Open School Website</string>
    <string name="open_in_map">Open in Map</string>
    <string name="app_name_tc">HK School Finder 香港學校搜尋器</string>
    <string name="home_subtitle_tc">按地區及級別搜尋香港學校</string>
    <string name="search_hint_tc">按學校名稱或地址搜尋</string>
    <string name="refresh_school_list_tc">重新整理學校列表</string>
    <string name="ready_tc">就緒</string>
    <string name="loading_message_tc">正在載入學校資料...</string>
    <string name="load_failed_message_tc">無法載入最新資料，請稍後再試。</string>
    <string name="back_tc">返回</string>
    <string name="address_tc">地址</string>
    <string name="district_tc">地區</string>
    <string name="finance_type_tc">資助類別</string>
    <string name="students_gender_tc">學生性別</string>
    <string name="session_tc">授課時間</string>
    <string name="telephone_tc">電話</string>
    <string name="religion_tc">宗教</string>
    <string name="website_tc">網站</string>
    <string name="open_school_website_tc">開啟學校網站</string>
    <string name="open_in_map_tc">在地圖中開啟</string>
    <string name="no_app_for_website_tc">沒有應用程式可以開啟此網站</string>
    <string name="no_app_for_map_tc">沒有應用程式可以開啟地圖</string>
</resources>
